--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,7 @@
             <li><a href="/login" class="nav-link">login</a></li>
           </ul>
         </div>
-        <h4 class="text-slanted">Buy More</h4>
+        <img src="static/images/bm-white.png" alt="logo" class="nav-logo" />
 
         <div class="toggle-container">
           <button class="toggle-cart">
